// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultItemAction render - button 1`] = `
<OuiToolTip
  content="action 1"
  delay="long"
  position="top"
>
  <OuiButtonEmpty
    color="primary"
    flush="right"
    isDisabled={false}
    onClick={[Function]}
    size="s"
  >
    action1
  </OuiButtonEmpty>
</OuiToolTip>
`;

exports[`DefaultItemAction render - default button 1`] = `
<OuiToolTip
  content="action 1"
  delay="long"
  position="top"
>
  <OuiButtonEmpty
    color="primary"
    flush="right"
    isDisabled={false}
    onClick={[Function]}
    size="s"
  >
    action1
  </OuiButtonEmpty>
</OuiToolTip>
`;

exports[`DefaultItemAction render - icon 1`] = `
<OuiToolTip
  content="action 1"
  delay="long"
  position="top"
>
  <OuiButtonIcon
    aria-labelledby="generated-id"
    color="primary"
    iconType="trash"
    isDisabled={false}
    onClick={[Function]}
  />
  <OuiScreenReaderOnly>
    <span
      id="generated-id"
    >
      <span>
        action1
      </span>
    </span>
  </OuiScreenReaderOnly>
</OuiToolTip>
`;

exports[`DefaultItemAction render - name 1`] = `
<OuiToolTip
  content="action 1"
  delay="long"
  position="top"
>
  <OuiButtonEmpty
    color="primary"
    flush="right"
    isDisabled={false}
    onClick={[Function]}
    size="s"
  >
    <span>
      xyz
    </span>
  </OuiButtonEmpty>
</OuiToolTip>
`;
